fixed x-axis scrolling and FoodForge Scrollbars

--- a/Frontend/src/style/FoodForge.css
+++ b/Frontend/src/style/FoodForge.css
@@ -1,90 +1,47 @@
-#createRecipe_grid-container{
-    width: 100%;
-    height: 95vh;
-    background-color: #c7fc70;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    align-items: center;
-    overflow-x: hidden;
-    background-image: url("../assets/Loginpage_avocado.svg");
-    background-repeat: no-repeat;
-    background-size: 50%;
-
+html{
+     background-color: #38517d;
 }
 
-/* ---------------------------------*/
+#createRecipe_grid-container{
+     display: flex;
+
+}
 
 .subContainer_left{
-    grid-column: 1;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+     display: flex;
+     background-color:#38517d;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding-top: 100px;
+     width: 50%;
 }
+.subContainer_left > img{
+     width: 50%;
 
-.topContainer {
-    flex-grow: 1;
-    width: 50%;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: #C9FE71;
 }
-
-.SimplePaper{
-    position: absolute;
-    width: 150%;
-    height: 100%;
-}
-
-/* ---------------------------------*/
-
 .subContainer_right{
-    grid-column: 2;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-    box-shadow: black;
-    background-color: #C9FE71;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     background-color:#38517d;
+     flex-direction: column;
+     padding-top: 100px;
+     padding-right: 100px;
+     width: 50%;
 }
 
-/* ---------------------------------*/
-
-
-
-
-.formContainer {
-    width: 50%;
-    background-color: #C9FE71;
+#ingredientForm{
+     width: 50%;
 
 }
 
-.subC_right_1 {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+.subC_right_1{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
 }
 
-.subC_right_2 {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+textarea{
+     width: 50%;
 }
-
-.textArea{
-    width: 50rem;
-    height: 100%;
-
-}
-/* ---------------------------------*/
